# api/resolved/openapi/openapi.yaml
@@ -81,6 +81,12 @@ paths:
       - session
   /api/v1/users:
     get:
+      parameters:
+      - in: query
+        name: name
+        required: false
+        schema:
+          type: string
       responses:
         "200":
           content:
@@ -140,25 +146,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserResponseData"
-          description: Successful response
-      tags:
-      - user
-  /api/v1/user_name_search:
-    post:
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/UserNameSearchData"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: "#/components/schemas/UserResponseData"
-                type: array
           description: Successful response
       tags:
       - user
@@ -235,63 +222,29 @@ paths:
           description: Successful response
       tags:
       - user
-  /api/v1/date_spot_name_search:
-    post:
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/DateSpotNameSearchData"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: "#/components/schemas/AddressAndDateSpotsData"
-                type: array
-          description: Successful response
-      tags:
-      - date_spot
-  /api/v1/date_spots/sort:
-    post:
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/DateSpotSortData"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: "#/components/schemas/DateSpotSortResponseData"
-                type: array
-          description: Successful response
-      tags:
-      - date_spot
-  /api/v1/courses/sort:
-    post:
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: "#/components/schemas/CourseSortRequestData"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CourseSortResponseData"
-          description: Successful response
-      tags:
-      - course
   /api/v1/date_spots:
     get:
+      parameters:
+      - in: query
+        name: date_spot_name
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: prefecture_id
+        required: false
+        schema:
+          type: integer
+      - in: query
+        name: genre_id
+        required: false
+        schema:
+          type: integer
+      - in: query
+        name: come_time
+        required: false
+        schema:
+          type: string
       responses:
         "200":
           content:
@@ -460,6 +413,12 @@ paths:
       - genre
   /api/v1/courses:
     get:
+      parameters:
+      - in: query
+        name: prefecture_id
+        required: false
+        schema:
+          type: integer
       responses:
         "200":
           content:
@@ -888,13 +847,6 @@ components:
       - name
       - password
       - password_confirmation
-      type: object
-    UserNameSearchData:
-      properties:
-        user_name:
-          type: string
-      required:
-      - user_name
       type: object
     RelationShipResponsData:
       example:
@@ -1834,13 +1786,6 @@ components:
       - followed_user
       - users
       type: object
-    DateSpotNameSearchData:
-      properties:
-        date_spot_name:
-          type: string
-      required:
-      - date_spot_name
-      type: object
     AddressAndDateSpotsData:
       example:
         city_name: city_name
@@ -1894,290 +1839,6 @@ components:
       - longitude
       - prefecture_name
       - review_total_number
-      type: object
-    DateSpotSortData:
-      properties:
-        prefecture_id:
-          type: integer
-        genre_id:
-          type: integer
-        come_time:
-          format: date-time
-          type: string
-      required:
-      - come_time
-      - genre_id
-      - prefecture_id
-      type: object
-    DateSpotSortResponseData:
-      example:
-        come_time: 2000-01-23T04:56:07.000+00:00
-        prefecture_id: 0
-        address_and_date_spots:
-        - city_name: city_name
-          prefecture_name: prefecture_name
-          latitude: 6.0274563
-          review_total_number: 5
-          average_rate: 5.637377
-          date_spot:
-            image:
-              url: https://openapi-generator.tech
-            updated_at: 2000-01-23T04:56:07.000+00:00
-            closing_time: 2000-01-23T04:56:07.000+00:00
-            opening_time: 2000-01-23T04:56:07.000+00:00
-            name: name
-            average_rate: 7.0614014
-            created_at: 2000-01-23T04:56:07.000+00:00
-            id: 2
-            genre_id: 9
-          id: 0
-          genre_name: genre_name
-          longitude: 1.4658129
-        - city_name: city_name
-          prefecture_name: prefecture_name
-          latitude: 6.0274563
-          review_total_number: 5
-          average_rate: 5.637377
-          date_spot:
-            image:
-              url: https://openapi-generator.tech
-            updated_at: 2000-01-23T04:56:07.000+00:00
-            closing_time: 2000-01-23T04:56:07.000+00:00
-            opening_time: 2000-01-23T04:56:07.000+00:00
-            name: name
-            average_rate: 7.0614014
-            created_at: 2000-01-23T04:56:07.000+00:00
-            id: 2
-            genre_id: 9
-          id: 0
-          genre_name: genre_name
-          longitude: 1.4658129
-        genre_id: 6
-      properties:
-        address_and_date_spots:
-          items:
-            $ref: "#/components/schemas/AddressAndDateSpotsData"
-          type: array
-        prefecture_id:
-          type: integer
-        genre_id:
-          type: integer
-        come_time:
-          format: date-time
-          type: string
-      required:
-      - address_and_date_spots
-      - come_time
-      - genre_id
-      - prefecture_id
-      type: object
-    CourseSortRequestData:
-      properties:
-        prefecture_id:
-          type: integer
-      required:
-      - prefecture_id
-      type: object
-    CourseSortResponseData:
-      example:
-        courses:
-        - no_duplicate_prefecture_names:
-          - no_duplicate_prefecture_names
-          - no_duplicate_prefecture_names
-          date_spots:
-          - city_name: city_name
-            prefecture_name: prefecture_name
-            latitude: 6.0274563
-            review_total_number: 5
-            average_rate: 5.637377
-            date_spot:
-              image:
-                url: https://openapi-generator.tech
-              updated_at: 2000-01-23T04:56:07.000+00:00
-              closing_time: 2000-01-23T04:56:07.000+00:00
-              opening_time: 2000-01-23T04:56:07.000+00:00
-              name: name
-              average_rate: 7.0614014
-              created_at: 2000-01-23T04:56:07.000+00:00
-              id: 2
-              genre_id: 9
-            id: 0
-            genre_name: genre_name
-            longitude: 1.4658129
-          - city_name: city_name
-            prefecture_name: prefecture_name
-            latitude: 6.0274563
-            review_total_number: 5
-            average_rate: 5.637377
-            date_spot:
-              image:
-                url: https://openapi-generator.tech
-              updated_at: 2000-01-23T04:56:07.000+00:00
-              closing_time: 2000-01-23T04:56:07.000+00:00
-              opening_time: 2000-01-23T04:56:07.000+00:00
-              name: name
-              average_rate: 7.0614014
-              created_at: 2000-01-23T04:56:07.000+00:00
-              id: 2
-              genre_id: 9
-            id: 0
-            genre_name: genre_name
-            longitude: 1.4658129
-          travel_mode: travel_mode
-          authority: authority
-          id: 5
-          user:
-            image:
-              url: https://openapi-generator.tech
-            gender: gender
-            name: name
-            admin: true
-            id: 5
-            email: email
-        - no_duplicate_prefecture_names:
-          - no_duplicate_prefecture_names
-          - no_duplicate_prefecture_names
-          date_spots:
-          - city_name: city_name
-            prefecture_name: prefecture_name
-            latitude: 6.0274563
-            review_total_number: 5
-            average_rate: 5.637377
-            date_spot:
-              image:
-                url: https://openapi-generator.tech
-              updated_at: 2000-01-23T04:56:07.000+00:00
-              closing_time: 2000-01-23T04:56:07.000+00:00
-              opening_time: 2000-01-23T04:56:07.000+00:00
-              name: name
-              average_rate: 7.0614014
-              created_at: 2000-01-23T04:56:07.000+00:00
-              id: 2
-              genre_id: 9
-            id: 0
-            genre_name: genre_name
-            longitude: 1.4658129
-          - city_name: city_name
-            prefecture_name: prefecture_name
-            latitude: 6.0274563
-            review_total_number: 5
-            average_rate: 5.637377
-            date_spot:
-              image:
-                url: https://openapi-generator.tech
-              updated_at: 2000-01-23T04:56:07.000+00:00
-              closing_time: 2000-01-23T04:56:07.000+00:00
-              opening_time: 2000-01-23T04:56:07.000+00:00
-              name: name
-              average_rate: 7.0614014
-              created_at: 2000-01-23T04:56:07.000+00:00
-              id: 2
-              genre_id: 9
-            id: 0
-            genre_name: genre_name
-            longitude: 1.4658129
-          travel_mode: travel_mode
-          authority: authority
-          id: 5
-          user:
-            image:
-              url: https://openapi-generator.tech
-            gender: gender
-            name: name
-            admin: true
-            id: 5
-            email: email
-        prefecture_id: 0
-      properties:
-        courses:
-          items:
-            $ref: "#/components/schemas/CourseResponseData"
-          type: array
-        prefecture_id:
-          type: integer
-      required:
-      - courses
-      - prefecture_id
-      type: object
-    CourseResponseData:
-      example:
-        no_duplicate_prefecture_names:
-        - no_duplicate_prefecture_names
-        - no_duplicate_prefecture_names
-        date_spots:
-        - city_name: city_name
-          prefecture_name: prefecture_name
-          latitude: 6.0274563
-          review_total_number: 5
-          average_rate: 5.637377
-          date_spot:
-            image:
-              url: https://openapi-generator.tech
-            updated_at: 2000-01-23T04:56:07.000+00:00
-            closing_time: 2000-01-23T04:56:07.000+00:00
-            opening_time: 2000-01-23T04:56:07.000+00:00
-            name: name
-            average_rate: 7.0614014
-            created_at: 2000-01-23T04:56:07.000+00:00
-            id: 2
-            genre_id: 9
-          id: 0
-          genre_name: genre_name
-          longitude: 1.4658129
-        - city_name: city_name
-          prefecture_name: prefecture_name
-          latitude: 6.0274563
-          review_total_number: 5
-          average_rate: 5.637377
-          date_spot:
-            image:
-              url: https://openapi-generator.tech
-            updated_at: 2000-01-23T04:56:07.000+00:00
-            closing_time: 2000-01-23T04:56:07.000+00:00
-            opening_time: 2000-01-23T04:56:07.000+00:00
-            name: name
-            average_rate: 7.0614014
-            created_at: 2000-01-23T04:56:07.000+00:00
-            id: 2
-            genre_id: 9
-          id: 0
-          genre_name: genre_name
-          longitude: 1.4658129
-        travel_mode: travel_mode
-        authority: authority
-        id: 5
-        user:
-          image:
-            url: https://openapi-generator.tech
-          gender: gender
-          name: name
-          admin: true
-          id: 5
-          email: email
-      properties:
-        id:
-          type: integer
-        authority:
-          type: string
-        travel_mode:
-          type: string
-        user:
-          $ref: "#/components/schemas/UserData"
-        no_duplicate_prefecture_names:
-          items:
-            type: string
-          type: array
-        date_spots:
-          items:
-            $ref: "#/components/schemas/AddressAndDateSpotsData"
-          type: array
-      required:
-      - authority
-      - date_spots
-      - id
-      - no_duplicate_prefecture_names
-      - travel_mode
-      - user
       type: object
     DateSpotFormRequestData:
       properties:
@@ -2265,6 +1926,86 @@ components:
       required:
       - date_spot_reviews
       - review_average_rate
+      type: object
+    CourseResponseData:
+      example:
+        no_duplicate_prefecture_names:
+        - no_duplicate_prefecture_names
+        - no_duplicate_prefecture_names
+        date_spots:
+        - city_name: city_name
+          prefecture_name: prefecture_name
+          latitude: 6.0274563
+          review_total_number: 5
+          average_rate: 5.637377
+          date_spot:
+            image:
+              url: https://openapi-generator.tech
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            closing_time: 2000-01-23T04:56:07.000+00:00
+            opening_time: 2000-01-23T04:56:07.000+00:00
+            name: name
+            average_rate: 7.0614014
+            created_at: 2000-01-23T04:56:07.000+00:00
+            id: 2
+            genre_id: 9
+          id: 0
+          genre_name: genre_name
+          longitude: 1.4658129
+        - city_name: city_name
+          prefecture_name: prefecture_name
+          latitude: 6.0274563
+          review_total_number: 5
+          average_rate: 5.637377
+          date_spot:
+            image:
+              url: https://openapi-generator.tech
+            updated_at: 2000-01-23T04:56:07.000+00:00
+            closing_time: 2000-01-23T04:56:07.000+00:00
+            opening_time: 2000-01-23T04:56:07.000+00:00
+            name: name
+            average_rate: 7.0614014
+            created_at: 2000-01-23T04:56:07.000+00:00
+            id: 2
+            genre_id: 9
+          id: 0
+          genre_name: genre_name
+          longitude: 1.4658129
+        travel_mode: travel_mode
+        authority: authority
+        id: 5
+        user:
+          image:
+            url: https://openapi-generator.tech
+          gender: gender
+          name: name
+          admin: true
+          id: 5
+          email: email
+      properties:
+        id:
+          type: integer
+        authority:
+          type: string
+        travel_mode:
+          type: string
+        user:
+          $ref: "#/components/schemas/UserData"
+        no_duplicate_prefecture_names:
+          items:
+            type: string
+          type: array
+        date_spots:
+          items:
+            $ref: "#/components/schemas/AddressAndDateSpotsData"
+          type: array
+      required:
+      - authority
+      - date_spots
+      - id
+      - no_duplicate_prefecture_names
+      - travel_mode
+      - user
       type: object
     CourseFormRequestData:
       properties:
@@ -2389,6 +2130,15 @@ components:
       - opening_time
       - updated_at
       type: object
+    ImageData_1:
+      properties:
+        url:
+          format: binary
+          nullable: true
+          type: string
+      required:
+      - url
+      type: object
     UserData:
       example:
         image:
@@ -2419,15 +2169,6 @@ components:
       - id
       - image
       - name
-      type: object
-    ImageData_1:
-      properties:
-        url:
-          format: binary
-          nullable: true
-          type: string
-      required:
-      - url
       type: object
     DateSpotReviewResponseData_date_spot_reviews_inner:
       example:
